# mvp_shopify_agent_v1_0

./: .gitignore  GEMINI.md  README.md  todo.txt
.github/: deploy-on-master.yml
back-end/: .env.develop  .env.production  .gitignore  db.sqlite3  gunicorn_config.py  pyproject.toml
back-end/core/: settings.py  urls.py  wsgi.py
back-end/core/settings/: base.py  develop.py  production.py
back-end/shopify_agent/: admin.py  apps.py  interactive_test.py  models.py  tests.py  urls.py  utils.py  views.py
back-end/shopify_agent/agents/order_agent/: graph.py  prompts.py  runner.py  tools.py
back-end/shopify_agent/agents/stock_agent/: dedupe.py  graph.py  hitl.py  prompts.py  runner.py  state.py  tools.py
back-end/shopify_agent/migrations/: 0001_initial.py  0002_lowstockalert_sku.py  0003_providerorder_alter_lowstockalert_options.py  0004_lowstockalert_thread_id.py  0005_provider.py
